--- a/templates/index.html
+++ b/templates/index.html
@@ -2,60 +2,94 @@
 <html>
 <head>
     <title>Analizador Léxico</title>
+    <!-- <style>
+        table {
+            width: 100%;
+        }
+
+        table, th, td {
+            border-collapse: collapse;
+        }
+
+        th, td {
+            padding: 10px;
+            text-align: left;
+        }
+
+        th {
+            background-color: #f2f2f2;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+
+        tr:nth-child(odd) {
+            background-color: #f1f1f1;
+        }
+
+        form {
+            width: 100%;
+        }
+        textarea {
+            width: 100%;
+        }
+    </style> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-    <h1>Analizador Léxico</h1>
-    <form action="/" method="post">
-        <textarea name="code" rows="10" cols="50">{{ code }}</textarea><br>
-        <input type="submit" value="Generar Análisis">
-    </form>
+    <div class="container">
+        <h1 class="mt-5">Analizador Léxico</h1>
+        <form action="/" method="post">
+            <div class="form-group">
+                <label for="code">Código:</label>
+                <textarea class="form-control" name="code" rows="10" cols="50">{{ code }}</textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Generar Análisis</button>
+        </form>
 
-    <div id="result" style="display: block if tokens else none">
-        <h2>Resultado del Análisis</h2>
-        <table border="1">
-            <thead>
-                <tr>
-                    <th>Token</th>
-                    <th>PR</th>
-                    <th>Identificador</th>
-                    <th>Número</th>
-                    <th>Símbolo</th>
-                    <th>Tipo</th>
-                    <!-- <th>Paréntesis izquierdo</th>
-                    <th>Paréntesis derecho</th>
-                    <th>Llave izquierda</th>
-                    <th>Llave derecha</th> -->
-                </tr>
-            </thead>
-            <tbody>
-                {% for token in tokens %}
-                <tr>
-                    <td>{{ token['token'] }}</td>
-                    <td>{{ token['reservada'] }}</td>
-                    <td>{{ token['identificador'] }}</td>
-                    <td>{{ token['numero'] }}</td>
-                    <td>{{ token['simbolo'] }}</td>
+        <div id="result" style="display: block if tokens else none" class="mt-5">
+            <h2>Resultado del Análisis</h2>
+            <table class="table table-bordered">
+                <thead class="thead-light">
+                    <tr>
+                        <th>Token</th>
+                        <th>PR</th>
+                        <th>Identificador</th>
+                        <th>Número</th>
+                        <th>Símbolo</th>
+                        <th>Tipo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for token in tokens %}
+                    <tr>
+                        <td>{{ token['token'] }}</td>
+                        <td>{{ token['reservada'] }}</td>
+                        <td>{{ token['identificador'] }}</td>
+                        <td>{{ token['numero'] }}</td>
+                        <td>{{ token['simbolo'] }}</td>
 
-                    {% if token['parentesis_izquierdo'] %}
-                    <td>parentesis izquierdo</td>
-                    {% endif %}
+                        {% if token['parentesis_izquierdo'] %}
+                        <td>parentesis izquierdo</td>
+                        {% endif %}
 
-                    {% if token['parentesis_derecho'] %}
-                    <td>parentesis derecho</td>
-                    {% endif %}
+                        {% if token['parentesis_derecho'] %}
+                        <td>parentesis derecho</td>
+                        {% endif %}
 
-                    {% if token['llave_izquierda'] %}
-                    <td>llave izquierda</td>
-                    {% endif %}
+                        {% if token['llave_izquierda'] %}
+                        <td>llave izquierda</td>
+                        {% endif %}
 
-                    {% if token['llave_derecha'] %}
-                    <td>llave derecha</td>
-                    {% endif %}
-                    
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+                        {% if token['llave_derecha'] %}
+                        <td>llave derecha</td>
+                        {% endif %}
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
     </div>
 </body>
 </html>
